<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/menu_bg">

    <LinearLayout
        android:id="@+id/language_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/panel_difficulty"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/language_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/language_select_title"
            android:textAlignment="center"
            android:textColor="@color/menu_text"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/language_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/language_select_subtitle"
            android:textAlignment="center"
            android:textColor="@color/menu_text"
            android:textSize="13sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/language_option_english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/chip_bg_state"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:text="@string/language_label_english"
            android:textAllCaps="false"
            android:textColor="@color/chip_text" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/language_option_russian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/chip_bg_state"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:text="@string/language_label_russian"
            android:textAllCaps="false"
            android:textColor="@color/chip_text" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/language_option_french"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/chip_bg_state"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:text="@string/language_label_french"
            android:textAllCaps="false"
            android:textColor="@color/chip_text" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/language_option_german"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/chip_bg_state"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:text="@string/language_label_german"
            android:textAllCaps="false"
            android:textColor="@color/chip_text" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/language_option_spanish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/chip_bg_state"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:text="@string/language_label_spanish"
            android:textAllCaps="false"
            android:textColor="@color/chip_text" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
